--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,11 @@ name: Build (CI)
 on:
   push:
     branches-ignore:
-      - root
-      - develop
-
+      - main
   pull_request:
+
+env:
+  JAVA_VERSION: 21
 
 jobs:
   build:
@@ -15,17 +16,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Set up Java ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v4
-
         with:
-          java-version: 17
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: temurin
 
-      - name: Gradle (Setup)
+      - name: Validate Gradle wrapper
+        uses: gradle/actions/wrapper-validation@v4
+
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Gradle (Build)
+      - name: Build
         run: "./gradlew build"
 
       - name: Upload artifacts (Main JAR)
