--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: Main JAR
+          path: build/libs
       - name: Build Docker image
         uses: docker/build-push-action@v6
         with:
