--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           flavor: latest=true
+      - run: mkdir -p build/libs
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
