--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,8 @@ jobs:
     name: Build Docker Image
     runs-on: ubuntu-latest
     needs: build
+    concurrency:
+      group: docker
     steps:
       - uses: actions/checkout@v4
       - name: Setup Docker Buildx
