--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,7 @@
 name: Build & Publish
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 on:
   push:
@@ -49,8 +52,6 @@ jobs:
     name: Build Docker Image
     runs-on: ubuntu-latest
     needs: build
-    concurrency:
-      group: docker
     steps:
       - uses: actions/checkout@v4
       - name: Setup Docker Buildx
