Switch to a database

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,10 @@ TOKEN=BOT_TOKEN
 TEST_SERVER=123
 
 # The servers to be used by the ban sync system (each server ID is to be separated by |)
-SYNCED_BAN_SERVERS=
+SYNCED_BAN_SERVERS=12345,67890
 
 # Determines whenever the ban sync should be actioned on or not
 DRY_RUN=false
+
+# The URI used to connect to the MongoDB database
+ADAPTER_MONGODB_URI=
