add example docker compose files

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ DRY_RUN=false
 
 # The URI used to connect to the MongoDB database
 ADAPTER_MONGODB_URI=
+
+# DB
+DB_ROOT_USER=root
+#DB_ROOT_PASS=changeme
+DB_NAME=rtuuy
