--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ SYNCED_BAN_SERVERS=12345,67890
 DRY_RUN=false
 
 # The URI used to connect to the MongoDB database
-ADAPTER_MONGODB_URI=
+ADAPTER_MONGODB_URI=mongodb://root:changeme@localhost:27017/?authSource=admin
 
 # DB
 DB_ROOT_USER=root
-#DB_ROOT_PASS=changeme
+DB_ROOT_PASS=changeme
 DB_NAME=rtuuy
