--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,16 +1,4 @@
 services:
-  discord:
-    image: ghcr.io/upcraftlp/rtuuy:latest
-    restart: unless-stopped
-    depends_on:
-      - mongodb
-    env_file:
-      - .env
-    environment:
-      ADAPTER_MONGODB_URI: mongodb://${DB_ROOT_USER}:${DB_ROOT_PASS:?no DB password set!}@mongodb:27017/?authSource=admin
-    networks:
-      - internal
-
   mongodb:
     image: mongo
     restart: unless-stopped
@@ -20,6 +8,8 @@ services:
       MONGO_INITDB_DATABASE: ${DB_NAME}
     volumes:
       - rtuuy_data:/data/db
+    ports:
+      - "27015:27015"
     networks:
       - internal
 
