add system notifications extension

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,27 @@
 # THIS IS A TEMPLATE FILE. MAKE A COPY AND RENAME TO `.env` TO USE.
 
+# General Settings
 # https://discord.com/developers
 TOKEN=BOT_TOKEN
-
 # ID of the server to use for testing
 TEST_SERVER=123
+# The URI used to connect to the MongoDB database
+ADAPTER_MONGODB_URI=mongodb://root:changeme@localhost:27017/?authSource=admin
 
+# Ban Sync Module
 # The servers to be used by the ban sync system (each server ID is to be separated by |)
 SYNCED_BAN_SERVERS=12345,67890
-
 # Determines whenever the ban sync should be actioned on or not
 DRY_RUN=false
 
-# The URI used to connect to the MongoDB database
-ADAPTER_MONGODB_URI=mongodb://root:changeme@localhost:27017/?authSource=admin
+# System notifications module
+SYSTEM_NOTIFICATION_NTFY_TOPIC=rtuuy
+# If you want to use a custom NTFY server
+#SYSTEM_NOTIFICATION_NTFY_SERVER=
+# Authentication token if required
+#SYSTEM_NOTIFICATION_NTFY_TOKEN=
+# Comma-separated list of webhook URLs to post to
+#SYSTEM_NOTIFICATION_WEBHOOK_URLS=
 
 # DB
 DB_ROOT_USER=root
