--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Set up Environment
         run: |
           echo "COMMIT_SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
 
       - name: Set up Java ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v4
@@ -33,21 +34,14 @@ jobs:
         with:
           dependency-graph: generate-and-submit
 
-      - name: Build
+      - name: Build with Gradle
         run: "./gradlew build"
 
-      - name: Upload artifacts (Main JAR)
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Main JAR
-          path: build/libs/*-all.jar
-
-      - name: Upload artifacts (JARs)
-        uses: actions/upload-artifact@v4
-
-        with:
-          name: JARs
-          path: build/libs/*.jar
+          name: ${{ env.REPOSITORY_NAME }}-${{ env.COMMIT_SHA_SHORT }}
+          path: build/install/rtuuy
 
   docker:
     name: Build Docker Image
@@ -55,25 +49,35 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up Environment
+        run: |
+          echo "COMMIT_SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
+
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
+
       - name: Extract Docker metadata
         uses: docker/metadata-action@v5
         id: meta
         with:
           images: ghcr.io/${{ github.repository }}
           flavor: latest=true
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: Main JAR
-          path: build/libs
+          name: ${{ env.REPOSITORY_NAME }}-${{ env.COMMIT_SHA_SHORT }}
+          path: build/install/rtuuy
+
       - name: Build Docker image
         uses: docker/build-push-action@v6
         with:
@@ -83,3 +87,5 @@ jobs:
           cache-to: type=gha,mode=max
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            JAVA_VERSION=${{ env.JAVA_VERSION }}
