--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,12 @@ SYSTEM_NOTIFICATION_NTFY_TOPIC=rtuuy
 # Comma-separated list of webhook URLs to post to
 #SYSTEM_NOTIFICATION_WEBHOOK_URLS=
 
+#Posthog analytics module
+# If you are not using the US managed region
+#POSTHOG_INSTANCE_URL=
+# Your project API key
+#POSTHOG_API_KEY=
+
 # DB
 DB_ROOT_USER=root
 DB_ROOT_PASS=changeme
