switch to better posthog library

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,10 @@ SYSTEM_NOTIFICATION_NTFY_TOPIC=rtuuy
 # If you are not using the US managed region
 #POSTHOG_INSTANCE_URL=
 # Your project API key
-#POSTHOG_API_KEY=
+#POSTHOG_PROJECT_API_KEY=
+# An optional, additional private API key
+# This is required if you want to use feature flags, local evaluation, or query the PostHog API
+#POSTHOG_PERSONAL_API_KEY=
 
 # DB
 DB_ROOT_USER=root
