unify ban sync env var names

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ ADAPTER_MONGODB_URI=mongodb://root:changeme@localhost:27017/?authSource=admin
 
 # Ban Sync Module
 # The servers to be used by the ban sync system (each server ID is to be separated by |)
-SYNCED_BAN_SERVERS=12345,67890
+BAN_SYNC_SERVER_IDS=12345,67890
 # Determines whenever the ban sync should be actioned on or not
-DRY_RUN=false
+BAN_SYNC_DRY_RUN=false
 
 # System notifications module
 SYSTEM_NOTIFICATION_NTFY_TOPIC=rtuuy
