switch to postgresDB

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,6 @@
 TOKEN=BOT_TOKEN
 # ID of the server to use for testing
 TEST_SERVER=123
-# The URI used to connect to the MongoDB database
-ADAPTER_MONGODB_URI=mongodb://root:changeme@localhost:27017/?authSource=admin
 
 # Ban Sync Module
 # The servers to be used by the ban sync system (each server ID is to be separated by |)
@@ -33,5 +31,6 @@ SYSTEM_NOTIFICATION_NTFY_TOPIC=rtuuy
 #POSTHOG_PERSONAL_API_KEY=
 
 # DB
-DB_ROOT_USER=root
-DB_ROOT_PASS=changeme
+DATABASE_NAME=rtuuy
+DATABASE_USERNAME=rtuuy
+DATABASE_PASSWORD=changeme
