--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,9 @@ kordex-gradle = "1.7.0"
 kordex = "2.3.1-SNAPSHOT"
 ktor = "3.1.3"
 posthog = "0.1.6"
+exposed = "0.61.0"
+hikari = "6.3.0"
+postgresql = "42.7.5"
 
 [libraries]
 bouncycastle = { module = "org.bouncycastle:bcprov-jdk18on", version.ref = "bouncycastle" }
@@ -30,8 +33,18 @@ ktor_client_contentnegotiation = { module = "io.ktor:ktor-client-content-negotia
 ktor_serialization_json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 posthog = { module = "dev.hollowcube:posthog-java", version.ref = "posthog" }
 
+hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
+postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
+
+exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed" }
+exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
+exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
+exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed" }
+
 [bundles]
 ktor_client = ["ktor_client_core", "ktor_client_contentnegotiation", "ktor_serialization_json"]
+exposed = ["exposed-core", "exposed-jdbc", "exposed-dao", "exposed-kotlin-datetime"]
+database = ["hikari", "postgresql"]
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
