--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ TEST_SERVER=123
 BAN_SYNC_SERVER_IDS=12345,67890
 # Determines whenever the ban sync should be actioned on or not
 BAN_SYNC_DRY_RUN=false
+# How often to check for missed bans, if missing will disable periodic sync
+# see kotlin.time.Duration#parse() for supported formats
+BAN_SYNC_INTERVAL=6h
 
 # System notifications module
 SYSTEM_NOTIFICATION_NTFY_TOPIC=rtuuy
