--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ logback-groovy = "1.14.5"
 logging = "7.0.7"
 kordex-gradle = "1.7.0"
 kordex = "2.3.1-SNAPSHOT"
-ktor = "3.1.3"
+ktor = { strictly = "3.0.3" } # pin the same version as kord, or else things break
 posthog = "0.1.6"
 exposed = "0.61.0"
 hikari = "6.3.0"
