add data collection ID

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@
 TOKEN=BOT_TOKEN
 # ID of the server to use for testing
 TEST_SERVER=123
+# https://docs.kordex.dev/data-collection
+DATA_COLLECTION_UUID=13882eeb-7d87-4a1e-8d28-0d9ef0d935fd
 
 # Ban Sync Module
 # The servers to be used by the ban sync system (each server ID is to be separated by |)
