update example env

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,8 @@ TEST_SERVER=123
 DATA_COLLECTION_UUID=13882eeb-7d87-4a1e-8d28-0d9ef0d935fd
 
 # Ban Sync Module
-# The servers to be used by the ban sync system (each server ID is to be separated by |)
-BAN_SYNC_SERVER_IDS=12345,67890
 # Determines whenever the ban sync should be actioned on or not
-BAN_SYNC_DRY_RUN=false
+#BAN_SYNC_DRY_RUN=true
 # How often to check for missed bans, if missing will disable periodic sync
 # see kotlin.time.Duration#parse() for supported formats
 BAN_SYNC_INTERVAL=6h
