update example docker and env files

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,6 @@ SYSTEM_NOTIFICATION_NTFY_TOPIC=rtuuy
 DATABASE_NAME=rtuuy
 DATABASE_USERNAME=rtuuy
 DATABASE_PASSWORD=changeme
+
+# This is needed if you are not using docker
+DATABASE_URL=jdbc:postgresql://localhost:5432/rtuuy
